--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ body {
   
   
 .hero {
-  background-image: url('../assets/Images/bank-tree.jpeg');
+  background-image: url('./assets/Images/bank-tree.jpeg');
   background-position: 0 -30px;
   background-size: cover;
   background-repeat: no-repeat;
