--- a/src/index.css
+++ b/src/index.css
@@ -263,12 +263,26 @@ body {
   flex: 1;
 }
   
-.edit-button {
+.editName-button {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
   font-weight: bold;
   padding: 10px;
+}
+
+.editNameButton {
+  margin: 0.8em 0em
+}
+.editNameButton button{
+  color: #5b4df5;
+    font-weight: 500;
+    margin: 0em 1em;
+    padding: 0.5em;
+    width: 8em;
+    border: solid 2px #aaa9ef;
+    border-radius: 0.2em;
+    cursor: pointer;
 }
   
 .header {
@@ -313,12 +327,11 @@ body {
 }
 
 .change-zone {
-  margin: 0.5em;
-  padding: 0.4em;
-}
-
-.edit-container{
-  margin: 1em;
+  margin: 0em 1em;
+    padding: 0.5em;
+    width: 10em;
+    border-radius: 0.2em;
+    border: solid 2px lightgray;
 }
 
 .change-lastname{
